--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "pug": "^2.0.0-rc.3",
-    "steem": "^0.7.6"
+    "steem": "^0.7.6",
+    "tedious": "^6.2.0"
   },
   "devDependencies": {
     "@types/debug": "0.0.30",
